--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "vue-browser-template",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite --open",
+    "build": "vite build"
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -15,7 +14,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.1",
-    "vite-plugin-vue-devtools": "^7.6.5"
+    "vite": "^6.0.1"
   }
 }
