--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "vue-browser-template",
-  "version": "0.0.1",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite --open",
-    "build": "vite build"
-  },
   "dependencies": {
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.17.0",
     "vite": "^6.0.1"
-  }
+  },
+  "module": "index.ts",
+  "name": "vue-browser-template",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "check": "eslint --fix",
+    "dev": "vite --open"
+  },
+  "type": "module",
+  "version": "0.0.2"
 }
