--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "dependencies": {
-    "@meforma/vue-toaster": "^1.3.0",
-    "axios": "^1.7.9",
-    "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
-  },
-  "description": "Vue template for browser extensions",
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "eslint": "^9.17.0",
-    "tailwindcss": "^4.0.6",
-    "vite": "^6.0.1",
-    "vite-plugin-web-extension": "^4.3.1"
-  },
-  "name": "browser-ext-vue-kit",
-  "scripts": {
-    "build": "vite build",
-    "check": "eslint --fix",
-    "dev": "vite"
-  },
-  "type": "module",
-  "version": "0.3.0"
+    "dependencies": {
+        "@meforma/vue-toaster": "^1.3.0",
+        "axios": "^1.7.9",
+        "vue": "^3.5.13",
+        "vue-router": "^4.4.5"
+    },
+    "description": "Vue template for browser extensions",
+    "devDependencies": {
+        "@biomejs/biome": "^1.9.4",
+        "@tailwindcss/vite": "^4.0.6",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "tailwindcss": "^4.0.6",
+        "vite": "^6.0.1",
+        "vite-plugin-web-extension": "^4.3.1"
+    },
+    "name": "browser-ext-vue-kit",
+    "scripts": {
+        "build": "vite build",
+        "check": "biome check --write .",
+        "dev": "vite"
+    },
+    "type": "module",
+    "version": "0.3.0"
 }
