--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "dependencies": {
-        "@meforma/vue-toaster": "^1.3.0",
-        "axios": "^1.7.9",
-        "vue": "^3.5.13",
-        "vue-router": "^4.4.5"
+        "@meforma/vue-toaster": "1.3.0",
+        "axios": "1.11.0",
+        "vue": "3.5.21",
+        "vue-router": "4.5.1"
     },
     "description": "Vue template for browser extensions",
     "devDependencies": {
-        "@biomejs/biome": "^1.9.4",
-        "@tailwindcss/vite": "^4.0.6",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "tailwindcss": "^4.0.6",
-        "vite": "^6.0.1",
-        "vite-plugin-web-extension": "^4.3.1"
+        "@biomejs/biome": "2.2.3",
+        "@tailwindcss/vite": "4.1.13",
+        "@vitejs/plugin-vue": "6.0.1",
+        "tailwindcss": "4.1.13",
+        "vite": "7.1.4",
+        "vite-plugin-web-extension": "4.4.5"
     },
     "name": "browser-ext-vue-kit",
     "scripts": {
@@ -21,5 +21,5 @@
         "dev": "vite"
     },
     "type": "module",
-    "version": "0.3.0"
+    "version": "0.3.1"
 }
